# stl_task_06

./: README.md
Task05/: CMakeLists.txt
Task05/include/: CMakeLists.txt  ChebyshevDistanceCalculator.h  DistanceCalculator.h  EuclideanDistanceCalculator.h  Location.h  LocationSearcher.h  ManhattanDistanceCalculator.h
Task05/resources/: CMakeLists.txt  data.txt
Task05/src/: CMakeLists.txt  ChebyshevDistanceCalculator.cpp  EuclideanDistanceCalculator.cpp  LocationSearcher.cpp  ManhattanDistanceCalculator.cpp  main.cpp
